# advent-of-code-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
aoc/: Cargo.toml
aoc/benches/: aoc_bench.rs
aoc/src/: dl_data.rs  lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_19.rs  day_20.rs  day_22.rs  day_23.rs  day_24.rs  dl_data.rs  lib.rs  point_2d.rs
src/year_2020/: day_01.rs  day_03.rs  day_07.rs  day_10.rs  day_12.rs  day_13.rs  day_14.rs  mod.rs
src/year_2021/: day_03.rs  day_05.rs  day_13.rs  day_18.rs  day_22.rs  day_25.rs  mod.rs
src/year_2022/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_08.rs  day_10.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs  day_20.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
y2015/: Cargo.toml
y2015/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
y2016/: Cargo.toml
y2016/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  lib.rs
y2018/: Cargo.toml
y2018/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  elflang.rs  lib.rs
y2019/: Cargo.toml
y2019/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  intcode.rs  lib.rs
y2020/: Cargo.toml
y2020/src/: day_02.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_11.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
y2021/: Cargo.toml
y2021/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_08.rs  day_10.rs  day_12.rs  day_16.rs  day_18.rs  day_20.rs  day_21.rs  day_23.rs  lib.rs
y2022/: Cargo.toml
y2022/src/: day_01.rs  day_03.rs  day_06.rs  day_07.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_24.rs  lib.rs
y2023/: Cargo.toml
y2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
y2024/: Cargo.toml
y2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
y2025/: Cargo.toml
y2025/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  lib.rs
