[package]
name = "aoc-21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]

anyhow = "1"
regex = "1"
itertools = "0.10"
rayon = "1.6"
fxhash = "0.2"
once_cell = "1"

[dependencies.reqwest]
version = "0"
features = ["blocking"]

[dependencies.clap]
version = "4"