[workspace]
members = [
    "shared",
    "aoc",
    "y2018",
    "y2019",
    "y2020",
    "y2021",
    "y2022",
    "y2023",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.73"
regex = "1"
itertools = "0.12.0"
rayon = "1.8"
fxhash = "0.2.1"
nom = "7.1"
chrono = "0.4.31"
once_cell = "1.19.0"

quickcheck = "1.0.3"

[workspace.dependencies.reqwest]
version = "0"
features = ["blocking"]

[workspace.lints.rust]
unsafe_code = "forbid"
