[workspace]
members = [
    "shared",
    "aoc",
    "y2015",
    "y2016",
    "y2018",
    "y2019",
    "y2020",
    "y2021",
    "y2022",
    "y2023",
    "y2024",
    "y2025",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Robin Kåveland"]
description = "Advent of Code solutions in Rust"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/kaaveland/advent-of-code-rs"

[workspace.dependencies]
anyhow = "1.0.100"
regex = "1"
itertools = "0.13.0"
rayon = "1.11"
fxhash = "0.2.1"
nom = "7.1"
chrono = "0.4.42"
once_cell = "1.21.3"

quickcheck = "1.0.3"

[workspace.dependencies.reqwest]
version = "0.12.24"
features = ["blocking"]

[workspace.lints.rust]
unsafe_code = "forbid"
