[package]
name = "aoc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
itertools.workspace = true
rayon.workspace = true
fxhash.workspace = true
reqwest.workspace = true
shared = { path = "../shared" }
y2018 = { path = "../y2018" }
y2019 = { path = "../y2019" }
y2020 = { path = "../y2020" }
y2021 = { path = "../y2021" }
y2022 = { path = "../y2022" }
y2023 = { path = "../y2023" }
y2024 = { path = "../y2024" }
dirs = "5.0.1"
time = "0.3.37"

[dependencies.clap]
version = "4"
