[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
regex = "1"
itertools = "0.10"
rayon = "1.6"
fxhash = "0.2"

[dependencies.reqwest]
version = "0"
features = ["blocking"]
