[package]
name = "y2016"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
regex.workspace = true
itertools.workspace = true
rayon.workspace = true
fxhash.workspace = true
nom.workspace = true
chrono.workspace = true
md-5 = "0.10.6"
serde_json = "1.0.145"

[dev-dependencies]
quickcheck.workspace = true

[lints]
workspace = true
