[package]
name = "y2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = "1"
regex = "1"
itertools = "0.10"
rayon = "1.6"
fxhash = "0.2"
nom = "7.1"
once_cell = "1.17.2"
chrono = "0.4.26"

[dev-dependencies]
quickcheck = "1.0.3"
