[package]
name = "y2018"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
regex.workspace = true
itertools.workspace = true
rayon.workspace = true
fxhash.workspace = true
nom.workspace = true
once_cell.workspace = true
chrono.workspace = true

[dev-dependencies]
quickcheck.workspace = true
