[package]
name = "y2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = "1"
regex = "1"
itertools = "0.12.0"
rayon = "1.6"
fxhash = "0.2"
nom = "7.1"

[dev-dependencies]
quickcheck = "1.0.3"
