[package]
name = "y2025"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
regex.workspace = true
itertools.workspace = true
rayon.workspace = true
fxhash.workspace = true
nom.workspace = true
once_cell.workspace = true
anyhow.workspace = true
is_close = "0.1.3"
rand = "0.8.5"
bit-set = "0.8.0"

[dev-dependencies]
quickcheck.workspace = true
